--- a/Views/template.ejs
+++ b/Views/template.ejs
@@ -10,8 +10,8 @@
 	
   </head>
   <body>
-    <div id="app" class="preview" >
-      <ke-layout></ke-layout>
+    <div id="app">
+      <ocm-login></ocm-login>
       <ko-dialogs id="dialogs"></ko-dialogs>
       <ko-messager id="messager"></ko-messager>
     </div>
@@ -22,7 +22,6 @@
     <script src="/static/lib/ko-easyui/koeasyui.js"></script>
     <script src="/static/lib/komapping/knockout.mapping.js"></script>
     <script src="/static/lib/jquery-extend/jquery.form.js"></script>
-    <script src="/static/lib/jquery-extend/jquery.cookie.js"></script>
     <script src="/static/lib/lodash.min.js"></script>
   </body>
 </html>
